force-app/main/default/objects/purecloud__PureCloud_Entity__c/purecloud__PureCloud_Entity__c.object-meta.xml
<CustomObject>
    <label>Genesys Cloud Entity</label>
    <nameField>
        <label>Genesys Cloud Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Genesys Cloud Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>