force-app/main/default/objects/purecloud__PureCloud_Entity__c/fields/purecloud__PureCloud_ID__c.field-meta.xml
<CustomField>
    <fullName>purecloud__PureCloud_ID__c</fullName>
    <label>Genesys Cloud ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>