force-app/main/default/objects/purecloud__PureCloud_Entity__c/fields/purecloud__Type__c.field-meta.xml
<CustomField>
    <fullName>purecloud__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Skill</fullName>
            </value>
            <value>
                <fullName>Language</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>